crud prioridades listo

--- a/Views/css/style.css
+++ b/Views/css/style.css
@@ -191,10 +191,12 @@ a:hover{
 #search input{
     border:none;
     border-bottom: 2px solid #f16943;
-
 }
 #search input:hover{
     background-image: linear-gradient(to bottom , rgba(0,0,0,0), rgba(0,0,0,0), rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0), rgba(0,0,0,0), rgba(0,0,0,0),#f1694363,#f16943bb,#f16943);
+}
+#search input:focus{
+    background-color: #ffc8ae;
 }
 #search input,label{
     display: block;
@@ -282,6 +284,7 @@ td{
 }
 td:hover{
     background-color: rgb(226, 72, 0);
+    transition-duration: 0.4s;
 }
 
 th{
@@ -312,6 +315,7 @@ th{
 
 .editbtn:hover .fas{
     color: rgb(255, 255, 255);
+    transition-duration: 0.4s;
     text-shadow: none;
 }
 
@@ -563,4 +567,10 @@ border: none;
     text-shadow: none;
     transform: translate3d(2px,2px,2px);
     transition-duration: 0.2s
+}
+
+.color{
+    padding: 0;
+    height: 40px;
+    width: 80px;
 }
