--- a/Views/css/style.css
+++ b/Views/css/style.css
@@ -122,10 +122,10 @@ input:focus{
 }
 
 a{
-    color:#f88f72;
+    color:rgb(53, 53, 53);
 }
 a:hover{
-    color:#4abdac;
+    color:rgb(226, 72, 0);
 }
 .menu{
     border: 2px solid rgb(53, 53, 53);
